# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

# Neverwinter Nights.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 util.h \
                 resources.h \
                 tokenman.h \
                 modelloader.h \
                 model.h \
                 widget.h \
                 gui.h \
                 console.h \
                 loadprogress.h \
                 camera.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       resources.cpp \
                       tokenman.cpp \
                       modelloader.cpp \
                       model.cpp \
                       widget.cpp \
                       gui.cpp \
                       console.cpp \
                       loadprogress.cpp \
                       camera.cpp \
                       $(EMPTY)
