include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libdragonage.la

noinst_HEADERS = \
                 dragonage.h \
                 probes.h \
                 types.h \
                 util.h \
                 modelloader.h \
                 console.h \
                 campaigns.h \
                 campaign.h \
                 area.h \
                 room.h \
                 object.h \
                 waypoint.h \
                 placeable.h \
                 creature.h \
                 objectcontainer.h \
                 $(EMPTY)

libdragonage_la_SOURCES = \
                          dragonage.cpp \
                          probes.cpp \
                          util.cpp \
                          modelloader.cpp \
                          console.cpp \
                          campaigns.cpp \
                          campaign.cpp \
                          area.cpp \
                          room.cpp \
                          object.cpp \
                          waypoint.cpp \
                          placeable.cpp \
                          creature.cpp \
                          objectcontainer.cpp \
                          $(EMPTY)
