# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libdragonage.la

noinst_HEADERS = \
                 dragonage.h \
                 probes.h \
                 types.h \
                 util.h \
                 modelloader.h \
                 console.h \
                 event.h \
                 game.h \
                 campaigns.h \
                 campaign.h \
                 area.h \
                 room.h \
                 object.h \
                 waypoint.h \
                 placeable.h \
                 creature.h \
                 objectcontainer.h \
                 script/container.h \
                 script/functions.h \
                 script/function_tables.h \
                 $(EMPTY)

libdragonage_la_SOURCES = \
                          dragonage.cpp \
                          probes.cpp \
                          util.cpp \
                          modelloader.cpp \
                          console.cpp \
                          event.cpp \
                          game.cpp \
                          campaigns.cpp \
                          campaign.cpp \
                          area.cpp \
                          room.cpp \
                          object.cpp \
                          waypoint.cpp \
                          placeable.cpp \
                          creature.cpp \
                          objectcontainer.cpp \
                          script/container.cpp \
                          script/functions.cpp \
                          script/functions_math.cpp \
                          script/functions_string.cpp \
                          script/functions_module.cpp \
                          script/functions_object.cpp \
                          script/functions_creature.cpp \
                          script/functions_event.cpp \
                          $(EMPTY)
