include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libdragonage2.la

noinst_HEADERS = \
                 dragonage2.h \
                 probes.h \
                 types.h \
                 util.h \
                 modelloader.h \
                 console.h \
                 game.h \
                 campaigns.h \
                 campaign.h \
                 area.h \
                 room.h \
                 object.h \
                 waypoint.h \
                 placeable.h \
                 creature.h \
                 objectcontainer.h \
                 $(EMPTY)

libdragonage2_la_SOURCES = \
                           dragonage2.cpp \
                           probes.cpp \
                           util.cpp \
                           modelloader.cpp \
                           console.cpp \
                           game.cpp \
                           campaigns.cpp \
                           campaign.cpp \
                           area.cpp \
                           room.cpp \
                           object.cpp \
                           waypoint.cpp \
                           placeable.cpp \
                           creature.cpp \
                           objectcontainer.cpp \
                           $(EMPTY)
