include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libjade.la

noinst_HEADERS = \
                 jade.h \
                 probes.h \
                 types.h \
                 modelloader.h \
                 console.h \
                 game.h \
                 module.h \
                 area.h \
                 room.h \
                 object.h \
                 objectcontainer.h \
                 creature.h \
                 placeable.h \
                 trigger.h \
                 waypoint.h \
                 gui/main/main.h \
                 script/container.h \
                 script/functions.h \
                 script/function_tables.h \
                 $(EMPTY)

libjade_la_SOURCES = \
                     jade.cpp \
                     probes.cpp \
                     modelloader.cpp \
                     console.cpp \
                     game.cpp \
                     module.cpp \
                     area.cpp \
                     room.cpp \
                     object.cpp \
                     objectcontainer.cpp \
                     creature.cpp \
                     placeable.cpp \
                     trigger.cpp \
                     waypoint.cpp \
                     gui/main/main.cpp \
                     script/container.cpp \
                     script/functions.cpp \
                     script/functions_math.cpp \
                     script/functions_string.cpp \
                     $(EMPTY)
