# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libjade.la

noinst_HEADERS = \
                 jade.h \
                 probes.h \
                 types.h \
                 modelloader.h \
                 console.h \
                 game.h \
                 module.h \
                 area.h \
                 room.h \
                 object.h \
                 objectcontainer.h \
                 creature.h \
                 placeable.h \
                 trigger.h \
                 waypoint.h \
                 location.h \
                 gui/main/main.h \
                 script/container.h \
                 script/functions.h \
                 script/function_tables.h \
                 $(EMPTY)

libjade_la_SOURCES = \
                     jade.cpp \
                     probes.cpp \
                     modelloader.cpp \
                     console.cpp \
                     game.cpp \
                     module.cpp \
                     area.cpp \
                     room.cpp \
                     object.cpp \
                     objectcontainer.cpp \
                     creature.cpp \
                     placeable.cpp \
                     trigger.cpp \
                     waypoint.cpp \
                     location.cpp \
                     gui/main/main.cpp \
                     script/container.cpp \
                     script/functions.cpp \
                     script/functions_math.cpp \
                     script/functions_string.cpp \
                     script/functions_object.cpp \
                     $(EMPTY)
