add_library(engines_kotor STATIC
  kotor.cpp
  console.cpp
  modelloader.cpp
  object.cpp
  situated.cpp
  placeable.cpp
  door.cpp
  creature.cpp
  area.cpp
  module.cpp
  gui/widgets/button.cpp
  gui/widgets/checkbox.cpp
  gui/widgets/kotorwidget.cpp
  gui/widgets/label.cpp
  gui/widgets/listbox.cpp
  gui/widgets/panel.cpp
  gui/widgets/progressbar.cpp
  gui/widgets/protoitem.cpp
  gui/widgets/scrollbar.cpp
  gui/widgets/slider.cpp
  gui/gui.cpp
  gui/main/main.cpp
  gui/main/movies.cpp
  gui/main/options.cpp
  gui/options/gameplay.cpp
  gui/options/mousesettings.cpp
  gui/options/keyboardconfig.cpp
  gui/options/feedback.cpp
  gui/options/autopause.cpp
  gui/options/graphics.cpp
  gui/options/graphicsadv.cpp
  gui/options/sound.cpp
  gui/options/soundadv.cpp
)
target_link_libraries(engines_kotor engines)
