include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libkotor.la

noinst_HEADERS = \
                 types.h \
                 kotor.h \
                 model.h \
                 area.h \
                 module.h \
                 object.h \
                 situated.h \
                 door.h \
                 placeable.h \
                 $(EMPTY)

libkotor_la_SOURCES = \
                      kotor.cpp \
                      model.cpp \
                      area.cpp \
                      module.cpp \
                      object.cpp \
                      situated.cpp \
                      door.cpp \
                      placeable.cpp \
                      $(EMPTY)
