include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libkotor.la

noinst_HEADERS = \
                 kotor.h \
                 probes.h \
                 console.h \
                 modelloader.h \
                 game.h \
                 object.h \
                 situated.h \
                 placeable.h \
                 door.h \
                 creature.h \
                 area.h \
                 room.h \
                 module.h \
                 gui/widgets/button.h \
                 gui/widgets/checkbox.h \
                 gui/widgets/kotorwidget.h \
                 gui/widgets/label.h \
                 gui/widgets/listbox.h \
                 gui/widgets/panel.h \
                 gui/widgets/progressbar.h \
                 gui/widgets/protoitem.h \
                 gui/widgets/scrollbar.h \
                 gui/widgets/slider.h \
                 gui/gui.h \
                 gui/main/main.h \
                 gui/main/movies.h \
                 gui/main/options.h \
                 gui/options/gameplay.h \
                 gui/options/mousesettings.h \
                 gui/options/keyboardconfig.h \
                 gui/options/feedback.h \
                 gui/options/autopause.h \
                 gui/options/graphics.h \
                 gui/options/graphicsadv.h \
                 gui/options/sound.h \
                 gui/options/soundadv.h \
                 $(EMPTY)

libkotor_la_SOURCES = \
                      kotor.cpp \
                      probes.cpp \
                      console.cpp \
                      modelloader.cpp \
                      game.cpp \
                      object.cpp \
                      situated.cpp \
                      placeable.cpp \
                      door.cpp \
                      creature.cpp \
                      area.cpp \
                      room.cpp \
                      module.cpp \
                      gui/widgets/button.cpp \
                      gui/widgets/checkbox.cpp \
                      gui/widgets/kotorwidget.cpp \
                      gui/widgets/label.cpp \
                      gui/widgets/listbox.cpp \
                      gui/widgets/panel.cpp \
                      gui/widgets/progressbar.cpp \
                      gui/widgets/protoitem.cpp \
                      gui/widgets/scrollbar.cpp \
                      gui/widgets/slider.cpp \
                      gui/gui.cpp \
                      gui/main/main.cpp \
                      gui/main/movies.cpp \
                      gui/main/options.cpp \
                      gui/options/gameplay.cpp \
                      gui/options/mousesettings.cpp \
                      gui/options/keyboardconfig.cpp \
                      gui/options/feedback.cpp \
                      gui/options/autopause.cpp \
                      gui/options/graphics.cpp \
                      gui/options/graphicsadv.cpp \
                      gui/options/sound.cpp \
                      gui/options/soundadv.cpp \
                      $(EMPTY)
