# xoreos - A reimplementation of BioWare's Aurora engine
#
# xoreos is the legal property of its developers, whose names
# can be found in the AUTHORS file distributed with this source
# distribution.
#
# xoreos is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 3
# of the License, or (at your option) any later version.
#
# xoreos is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with xoreos. If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libkotor.la

noinst_HEADERS = \
                 kotor.h \
                 probes.h \
                 types.h \
                 console.h \
                 modelloader.h \
                 game.h \
                 object.h \
                 situated.h \
                 waypoint.h \
                 placeable.h \
                 door.h \
                 creature.h \
                 area.h \
                 room.h \
                 objectcontainer.h \
                 module.h \
                 gui/widgets/button.h \
                 gui/widgets/checkbox.h \
                 gui/widgets/kotorwidget.h \
                 gui/widgets/label.h \
                 gui/widgets/listbox.h \
                 gui/widgets/panel.h \
                 gui/widgets/progressbar.h \
                 gui/widgets/protoitem.h \
                 gui/widgets/scrollbar.h \
                 gui/widgets/slider.h \
                 gui/gui.h \
                 gui/main/main.h \
                 gui/main/movies.h \
                 gui/main/options.h \
                 gui/options/gameplay.h \
                 gui/options/mousesettings.h \
                 gui/options/keyboardconfig.h \
                 gui/options/feedback.h \
                 gui/options/autopause.h \
                 gui/options/graphics.h \
                 gui/options/graphicsadv.h \
                 gui/options/sound.h \
                 gui/options/soundadv.h \
                 script/container.h \
                 script/functions.h \
                 script/function_tables.h \
                 $(EMPTY)

libkotor_la_SOURCES = \
                      kotor.cpp \
                      probes.cpp \
                      console.cpp \
                      modelloader.cpp \
                      game.cpp \
                      object.cpp \
                      waypoint.cpp \
                      situated.cpp \
                      placeable.cpp \
                      door.cpp \
                      creature.cpp \
                      area.cpp \
                      room.cpp \
                      objectcontainer.cpp \
                      module.cpp \
                      gui/widgets/button.cpp \
                      gui/widgets/checkbox.cpp \
                      gui/widgets/kotorwidget.cpp \
                      gui/widgets/label.cpp \
                      gui/widgets/listbox.cpp \
                      gui/widgets/panel.cpp \
                      gui/widgets/progressbar.cpp \
                      gui/widgets/protoitem.cpp \
                      gui/widgets/scrollbar.cpp \
                      gui/widgets/slider.cpp \
                      gui/gui.cpp \
                      gui/main/main.cpp \
                      gui/main/movies.cpp \
                      gui/main/options.cpp \
                      gui/options/gameplay.cpp \
                      gui/options/mousesettings.cpp \
                      gui/options/keyboardconfig.cpp \
                      gui/options/feedback.cpp \
                      gui/options/autopause.cpp \
                      gui/options/graphics.cpp \
                      gui/options/graphicsadv.cpp \
                      gui/options/sound.cpp \
                      gui/options/soundadv.cpp \
                      script/container.cpp \
                      script/functions.cpp \
                      script/functions_math.cpp \
                      script/functions_string.cpp \
                      script/functions_module.cpp \
                      script/functions_object.cpp \
                      script/functions_situated.cpp \
                      script/functions_action.cpp \
                      script/functions_sound.cpp \
                      script/functions_movie.cpp \
                      $(EMPTY)
